# pdb_numpy

./: .bumpversion.toml  .gitignore  .readthedocs.yaml  3eam_dssp.txt  Compare_mmcif_parse.ipynb  MANIFEST.in  Makefile  README.md  README.rst  Untitled.ipynb  azure-pipelines.yml  biopython_trst.py  cprofile_out  notebook_dev.ipynb  notebook_dev_debug.ipynb  notebook_dev_mmcif.ipynb  old_setup.cfg  performance.ipynb  piTM_test.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.cif  test.py  test_seq_C_align.ipynb  tmp  tmp.py
docs/: Makefile  requirements.txt
docs/source/: .readthedocs.yaml  basic_example.md  conf.py  index.rst  installation.md  logo_prompt.txt  modules.rst  pdb_numpy.alignement.rst  pdb_numpy.data.rst  pdb_numpy.format.rst  pdb_numpy.rst  pdb_numpy.tests.rst
src/pdb_numpy/: DSSP.py  _PDB.py  __init__.py  _align.c  _align.py  _alignement.py  _geom.py  _mmcif.py  _pdb.py  _select.py  abinitio.py  alignement.py  analysis.py  coor.py  geom.py  measure.py  mmcif.py  model.py  pdb.py  select.py  tmp.out  visu.py  visualization.py
src/pdb_numpy/alignement/: Profile.prof  __init__.py  _align.c  _align.dylib  align_cython.c  align_cython.pyx  profile_cython.py
src/pdb_numpy/data/: __init__.py  aa_dict.py  blosum.py  res_dict.py
src/pdb_numpy/format/: __init__.py  encode.py  encode_cython.pyx  gro.py  mmcif.py  pdb.py  pqr.py  split_cython.pyx
src/pdb_numpy/tests/: __init__.py  datafiles.py  test_DSSP.py  test_abinitio.py  test_alignement.py  test_analysis.py  test_coor.py  test_encode.py  test_geom.py  test_gro.py  test_measure.py  test_mmcif.py  test_pdb.py  test_pqr.py  test_select.py  test_sym_trans.py
src/pdb_numpy/tests/input/: 1rxz_11587_scores_rank_001_alphafold2_multimer_v3_model_4_seed_000.json  1rxz_11587_scores_rank_002_alphafold2_multimer_v3_model_5_seed_000.json  1rxz_11587_scores_rank_003_alphafold2_multimer_v3_model_2_seed_000.json  1rxz_11587_scores_rank_004_alphafold2_multimer_v3_model_1_seed_000.json  1rxz_11587_scores_rank_005_alphafold2_multimer_v3_model_3_seed_000.json  1y0m.cif  1y0m.pqr  2ol9.cif  2rri.cif  2rri.gro  3ftk.cif  examplefold_pdb_7rce_full_data_0.json  examplefold_pdb_7rce_model_0.cif
