[bumpversion]
current_version = 0.0.4
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = {major}.{minor}.{patch}

[metadata]
description_file = README.rst
license_files = LICENSE

[bumpversion:file:setup.py]

[bumpversion:file:src/pdb_numpy/__init__.py]

[bumpversion:file:docs/source/conf.py]


[bdist_wheel]
python_tag = cp3

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
